--- a/src/FIAP.FCG.User.API/Properties/launchSettings.json
+++ b/src/FIAP.FCG.User.API/Properties/launchSettings.json
@@ -5,10 +5,18 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "environmentVariables": {
-        "ASPNETCORE_HTTP_PORTS": "5001"
+        "ASPNETCORE_HTTP_PORTS": "3001"
       },
       "publishAllPorts": true,
       "useSSL": false
+    },
+    "API (Local - SSH Tunnel)": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:3001",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
