--- a/src/FIAP.FCG.User.Service/FIAP.FCG.User.Service.csproj
+++ b/src/FIAP.FCG.User.Service/FIAP.FCG.User.Service.csproj
@@ -16,6 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.SQS" Version="4.0.2.9" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
